Initial files for Josh

--- a/app/templates/components/new-rental.hbs
+++ b/app/templates/components/new-rental.hbs
@@ -25,6 +25,6 @@
   </form>
 </div>
 {{else}}
-<button {{action 'rentalFormShow'}}>New Rental</button>
+<button class="btn btn-success"{{action 'rentalFormShow'}}>New Rental</button>
 
 {{/if}}
