--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,6 +1,14 @@
+
+
+{{#link-to 'index'}}Home{{/link-to}} |
+{{#link-to 'about'}}About{{/link-to}} |
+{{#link-to 'contact'}}Contact{{/link-to}} |
+{{#link-to 'announcement'}}News{{/link-to}}<br>
+
 <h1> Welcome to Super Rentals </h1>
 
-We hope you find exactly what you're looking for in a place to stay.
+<p>We hope you find exactly what you're looking for in a place to stay.</p>
+
 <ul>
   {{#each model as |rental|}}
   {{rental-tile rental=rental}}
@@ -8,9 +16,3 @@ We hope you find exactly what you're looking for in a place to stay.
 </ul>
 
 {{new-rental saveRental2="saveRental3"}}
-
-
-
-{{#link-to 'about'}}About{{/link-to}}<br>
-{{#link-to 'contact'}}Click here to contact us.{{/link-to}}<br>
-{{#link-to 'index'}}HOME{{/link-to}}<br>
