--- a/app/templates/announcement.hbs
+++ b/app/templates/announcement.hbs
@@ -1,3 +1,7 @@
+{{#link-to 'index'}}Home{{/link-to}} |
+{{#link-to 'about'}}About{{/link-to}} |
+{{#link-to 'contact'}}Contact{{/link-to}} |
+{{#link-to 'announcement'}}News{{/link-to}}<br>
 
   {{#each model as |announcement|}}
     {{announcement-tile announcement=announcement}}
