--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -4,5 +4,5 @@
   </header>
   {{outlet}}
   <hr>
-  <footer>{{#link-to 'contact'}}Our represtatives would love to help!{{/link-to}}</footer>
+  <footer></footer>
 </div>
