--- a/app/templates/components/rental-detail.hbs
+++ b/app/templates/components/rental-detail.hbs
@@ -3,4 +3,4 @@ Located in {{rental.city}}, this {{rental.bedrooms}} bedroom {{rental.type}} is 
 <p>
   <img src={{rental.image}} alt={{rental.type}} />
 </p>
-<button {{action 'delete' rental}}>Delete</button>
+<button class="btn btn-danger"{{action 'delete' rental}}>Delete</button>
