--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -1,6 +1,11 @@
-<p>Super Rentals Representatives would love to help you choose a destination or answer any burning questions you may have.</p>
+{{#link-to 'index'}}Home{{/link-to}} |
+{{#link-to 'about'}}About{{/link-to}} |
+{{#link-to 'contact'}}Contact{{/link-to}} |
+{{#link-to 'announcement'}}News{{/link-to}}<br>
 
-<p>Contact us today!</p>
+<h2>Contact</h2>
+
+<p>Super Rentals Representatives would love to help you choose a destination or answer any burning questions you may have.</p>
 
 <p>
   Super Rentals Headquarters<br>
@@ -11,6 +16,3 @@
 <p>(503) 555-1212</p>
 
 <p>superrentalsrep@superrentals.com</p>
-
-{{#link-to 'about'}}About{{/link-to}}
-{{#link-to 'index'}}HOME{{/link-to}}
