--- a/app/templates/rental.hbs
+++ b/app/templates/rental.hbs
@@ -1,3 +1,14 @@
+
+{{#link-to 'index'}}Home{{/link-to}} |
+{{#link-to 'about'}}About{{/link-to}} |
+{{#link-to 'contact'}}Contact{{/link-to}} |
+{{#link-to 'announcement'}}News{{/link-to}}<br>
+
+
 <h2>More information about {{model.owner}}'s {{model.type}}</h2>
+
+
+
 {{update-rental rental=model update="update"}}
+
 {{rental-detail rental=model destroyRental="destroyRental"}}
