--- a/app/templates/rental.hbs
+++ b/app/templates/rental.hbs
@@ -11,4 +11,5 @@
 
 {{update-rental rental=model update="update"}}
 
+<!-- rental-detail component is loaded below -->
 {{rental-detail rental=model destroyRental="destroyRental"}}
