--- a/app/templates/announcement.hbs
+++ b/app/templates/announcement.hbs
@@ -1,8 +1,20 @@
-{{#link-to 'index'}}Home{{/link-to}} |
-{{#link-to 'about'}}About{{/link-to}} |
-{{#link-to 'contact'}}Contact{{/link-to}} |
-{{#link-to 'announcement'}}News{{/link-to}}<br>
+<div class="container">
+  <h2>Announcements</h2>
 
-  {{#each model as |announcement|}}
-    {{announcement-tile announcement=announcement}}
-  {{/each}}
+  <div class="nav"><hr>
+    {{#link-to 'index'}}Home{{/link-to}} |
+    {{#link-to 'about'}}About{{/link-to}} |
+    {{#link-to 'contact'}}Contact{{/link-to}} |
+    {{#link-to 'announcement'}}News{{/link-to}}
+  </div><hr>
+
+
+  <ul>
+    {{#each model as |announcement|}}
+       {{announcement-tile announcement=announcement destroyAnnouncement="destroyAnnouncement"}}
+    {{/each}}
+  </ul>
+
+    {{new-announcement saveAnnouncement2="saveAnnouncement3"}}
+
+</div>
