--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -2,7 +2,13 @@
   <header class="jumbotron">
     <h1>Super Rentals</h1>
   </header>
+  <div class="nav"><hr>
+    {{#link-to 'index'}}Home{{/link-to}} |
+    {{#link-to 'about'}}About{{/link-to}} |
+    {{#link-to 'contact'}}Contact{{/link-to}} |
+    {{#link-to 'announcement'}}News{{/link-to}}
+  </div><hr>
   {{outlet}}
   <hr>
-  <footer></footer>
+  <footer>© 2017</footer>
 </div>
